crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__overview_net_worth_200x55.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                                                                                                      
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                                                                                          full.toml ● 
╯          ╰┴────────┴┴─────────┴┴───────┴┴──────┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 Money lasts                                       Success                                           Ends with                                         Lifetime taxes                                   
 Never short                                       waiting                                           $2.09M                                            $697k                                            
╭ Milestones ──────────────────────────────────────────────────────────────────────────────────────╮╭ Needs attention ─────────────────────────────────────────────────────────────────────────────────╮
│▏ 2032 inheritance arrives                                                                       ▲││▏ No plan issues                                                                                  │
│  2037 retire                                                                                    █││                                                                                                  │
│  2037 db-pension starts                                                                         █││                                                                                                  │
│  2037 401k-deferral ends                                                                        █││                                                                                                  │
│  2037 401k-match ends                                                                           █││                                                                                                  │
│  2037 hsa-deferral ends                                                                         █││                                                                                                  │
│  2040 Medicare · jordan                                                                         ║││                                                                                                  │
│  2042 Social Security · jordan, $40k a year                                                     ▼││                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Net worth · today's dollars ─────────────────────────────────────────────────────────────────────────────────────────╮╭ 2026 · to do · in that year's dollars ───────────────────────────────────────╮
│2.20M│┊                        ┊                                                                           ┌─────────┐││▏ Contribute $32,000 to fid-401k ($24,000 yours, $8,000 employer)             │
│     │┊                      ⣀⣀⣀⡀                                                                          │net worth│││  Contribute $8,000 to hsa                                                    │
│     │┊                    ⡠⠊  ┊⠈⠑⠒⠢⠤⣀                                                       ⢀⣀⣀⠤⠤⠤⠤⠔⠒⠒⠒⠒⠉⠉└─────────┘││  Save the unspent $9,020 in cash                                             │
│     │┊                  ⡠⠊    ┊      ⠉⠉⠒⠒⠢⠤⠤⠤⠤⠒⠒⠢⠤⠤⠤⠤⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡀           ⣀⣀⣀⣀⣀⠤⠤⠒⠒⠒⠒⠒⠉⠉⠉⠉⠁                        ││                                                                              │
│     │┊                ⡠⠊      ┊                                 ⠈⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉                                         ││                                                                              │
│     │┊             ⢀⠤⠊        ┊                                                                                      ││                                                                              │
│     │┊            ⡰⠁          ┊                                                                                      ││                                                                              │
│     │┊           ⡔⠁           ┊                                                                                      ││                                                                              │
│     │┊         ⡠⠊             ┊                                                                                      ││                                                                              │
│     │┊      ⢀⠤⠊               ┊                                                                                      ││                                                                              │
│     │┊    ⡠⠔⠁                 ┊                                                                                      ││                                                                              │
│     │┊ ⢀⠤⠊                    ┊                                                                                      ││                                                                              │
│     │⡠⠒⠁                      ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│     │┊                        ┊                                                                                      ││                                                                              │
│0    │┊                        ┊                                                                                      ││                                                                              │
│     └────────────────────────────────────────────────────────────────────────────────────────────────────────────────││                                                                              │
│  2026                    retire 2037                       2050                                                  2074││                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯
╭ Could do better ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│▏ …                                                                                                                                                                                                   │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ markets  ←→ year  ⇥ pane  v chart  e edit  ctrl-s save  r reload  q quit  ctrl-↓ tab  n toggle dollars                                                                            : commands  ? help
