crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__people_128x32.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
assertion_line: 26
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  full.toml ● 
┴──────────┴┴────────┴┴─────────┴┴───────┴╯      ╰──────────────────────────────────────────────────────────────────────────────
╭ Plan ─────────────╮╭ People ──────────────────────────────────────────────────────────────╮ ╭ Person ────────────────────────╮
│  Accounts       7 ││  Person         Birth date         Earnings                          │ │                                │
│  Income         4 ││▌ jordan         1975-06-14         -                                 │ │▏ ID          jordan            │
│  Expenses       2 ││  alex           1979-02-01         -                                 │ │  Name                          │
│  Cliffs         0 ││                                                                      │ │  Birth date  1975-06-14        │
│  Transfers      1 ││                                                                      │ │  Earnings                      │
│  Conversions    1 ││                                                                      │ │                                │
│  Contributions  3 ││                                                                      │ │                                │
│  Events         1 ││                                                                      │ │                                │
│▏ People         2 ││                                                                      │ │                                │
│  Residency      1 ││                                                                      │ │                                │
│  Household        ││                                                                      │ │                                │
│  Settings         ││                                                                      │ │                                │
│  Market           ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││                                                                      │ │                                │
│                   ││  [ + Add Person ]                                                    │ │                                │
╰───────────────────╯╰──────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────────╯
 ⏎ edit  ← domains  ⇥ pane  a add  d delete  e earnings  ctrl-s save  r reload  q quit  ctrl-↓ tab           : commands  ? help
